# pydantic-cli-model

./: .gitignore  mkdocs.yml  publish.sh  pyproject.toml
examples/: basic_usage.py
pydantic_cli_model/: climodel.py
tests/: conftest.py  test_basic.py
