[tool.poetry]
name = "pydantic-cli-model"
version = "0.1.0"
description = ""
authors = ["Matthew Billman <mgbvox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
black = "^24.2.0"
ruff = "^0.2.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
